<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QRWidget</string>
    <string name="app_name2">QRWidget</string>
    <string name="hello_world">Listo!</string>
    <string name="action_settings">Settings</string>
      <string name="botonGenerar">Generar QR</string>
      <string name="ingrese_usuario">Usuario</string>
        <string name="ingrese_identificador">Id</string>
         <string name="button1">Generar</string>
         
          <string name="editText1">Usuario</string>
          <string name="editText2">Identificador</string>
         <string name="editText3">Fecha ej:12.10.2014</string>
         
        
         <string name="button2">Generar</string>
         <string name="textView2">Ingrese los siguientes datos:</string>
      <string name="imageView1">Imagen</string>
      

</resources>
